# medpulse

./: .gitattributes  .gitignore  LICENSE  MedPulse.sed  Packer.cs  README.md  android_pill_icon.xml  buildozer.spec  keystore_base64.txt  launch.vbs  medpulse.spec  pyproject.toml  setup.py
.github/workflows/: build.yml
forandroidbuild/: .gitignore  build.gradle  gradle.properties  gradlew  settings.gradle
forandroidbuild/app/: build.gradle
forandroidbuild/app/src/main/: AndroidManifest.xml
forandroidbuild/app/src/main/assets/locales/: __init__.py
forandroidbuild/app/src/main/python/: bridge.py
forandroidbuild/app/src/main/python/medpulse/: __init__.py  i18n.py
forandroidbuild/app/src/main/res/drawable/: ic_launcher_foreground.xml
medpulse/: __main__.py  app.py  i18n.py
medpulse/core/: __init__.py  exceptions.py  models.py  resources.py  units.py
medpulse/core/calculators/: __init__.py  burns.py  infusion.py  pediatrics.py
medpulse/core/scores/: __init__.py
medpulse/core/timers/: service.py
medpulse/data/checklists/: procedures.json
medpulse/data/drugs/: infusion_templates.json
medpulse/data/scores/: __init__.py  gcs.json  index.json
medpulse/locales/: zh_CN.json
medpulse/ui/: __init__.py
medpulse/ui/android/: app.py
medpulse/ui/windows/: __init__.py  app.py  renderer.py  widgets.py
scripts/: build_windows.ps1  run_windows.ps1
tests/: test_abg.py  test_burns.py  test_drugs.py  test_electrolytes.py  test_infusion.py  test_pediatrics.py  test_resources.py  test_scores.py  test_timers.py
(+34 files in other folders)
